
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {scalar_t__ tag; scalar_t__ len; int p; } ;
typedef TYPE_1__ mbedtls_x509_buf ;


 scalar_t__ MBEDTLS_ASN1_PRINTABLE_STRING ;
 scalar_t__ MBEDTLS_ASN1_UTF8_STRING ;
 scalar_t__ memcmp (int ,int ,scalar_t__) ;
 scalar_t__ x509_memcasecmp (int ,int ,scalar_t__) ;

__attribute__((used)) static int x509_string_cmp( const mbedtls_x509_buf *a, const mbedtls_x509_buf *b )
{
    if( a->tag == b->tag &&
        a->len == b->len &&
        memcmp( a->p, b->p, b->len ) == 0 )
    {
        return( 0 );
    }

    if( ( a->tag == MBEDTLS_ASN1_UTF8_STRING || a->tag == MBEDTLS_ASN1_PRINTABLE_STRING ) &&
        ( b->tag == MBEDTLS_ASN1_UTF8_STRING || b->tag == MBEDTLS_ASN1_PRINTABLE_STRING ) &&
        a->len == b->len &&
        x509_memcasecmp( a->p, b->p, b->len ) == 0 )
    {
        return( 0 );
    }

    return( -1 );
}
